--- a/starter-code v2/src/index.css
+++ b/starter-code v2/src/index.css
@@ -1,22 +1,32 @@
-@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html {
-  font-family: "Oxygen", sans-serif;
+	font-family: 'Oxygen', sans-serif;
 }
 
 body {
-  margin: 0;
-  background-color: whitesmoke;
+	margin: 0;
+	background-color: rgb(255, 255, 255);
 }
 
 .centered {
-  margin: 3rem auto;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	margin: 3rem auto;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	justify-items: center;
+	align-items: center;
+}
+
+.anything {
+	margin: 2rem;
+}
+
+.display h1 {
+	text-align: center;
+	margin: 3rem;
 }
