--- a/starter-code v2/src/index.css
+++ b/starter-code v2/src/index.css
@@ -5,12 +5,23 @@
 }
 
 html {
-	font-family: 'Oxygen', sans-serif;
+	font-family: 'Helvetica', sans-serif;
 }
 
 body {
 	margin: 0;
-	background-color: rgb(255, 255, 255);
+	background-image: url('/images/bg2.png');
+	background-color: rgba(0, 0, 0, 0.9);
+}
+body::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.2);
+	z-index: -1;
 }
 
 .centered {
@@ -29,4 +40,5 @@ body {
 .display h1 {
 	text-align: center;
 	margin: 3rem;
+	color: rgba(0, 0, 0, 0.8);
 }
