tidying up codes

--- a/starter-code v2/src/index.css
+++ b/starter-code v2/src/index.css
@@ -34,11 +34,14 @@ body::before {
 }
 
 .anything {
-	margin: 1rem 12rem 0 12rem;
+	margin: -1rem 12rem 0 12rem;
 }
 
 .display h1 {
 	text-align: center;
 	margin: 4rem 0rem 1rem 0rem;
 	color: rgba(0, 0, 0, 0.8);
+}
+.restList {
+	margin: 1rem 4rem 0 2rem;
 }
