--- a/starter-code v2/src/index.css
+++ b/starter-code v2/src/index.css
@@ -10,10 +10,9 @@ html {
 
 body {
 	margin: 0;
-	background-image: url('/images/bg2.png');
-	background-color: rgba(0, 0, 0, 0.9);
+	background-color: rgba(255, 255, 255, 0.9);
 }
-body::before {
+/* body::before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -22,7 +21,7 @@ body::before {
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.2);
 	z-index: -1;
-}
+} */
 
 .centered {
 	margin: 3rem auto;
