--- a/starter-code v2/src/index.css
+++ b/starter-code v2/src/index.css
@@ -12,16 +12,18 @@ body {
 	margin: 0;
 	background-color: rgba(255, 255, 255, 0.9);
 }
-/* body::before {
+body::before {
 	content: '';
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.2);
+	background-image: url('/images/bg-3.jpeg');
+	background-size: cover;
+	filter: grayscale(100%);
 	z-index: -1;
-} */
+}
 
 .centered {
 	margin: 3rem auto;
@@ -33,7 +35,7 @@ body {
 }
 
 .anything {
-	margin: -1rem 12rem 0 12rem;
+	margin: 0rem 10rem 0 10rem;
 }
 
 .display h1 {
@@ -42,5 +44,5 @@ body {
 	color: rgba(0, 0, 0, 0.8);
 }
 .restList {
-	margin: 1rem 4rem 0 2rem;
+	margin: 1rem 0rem 0 0rem;
 }
