--- a/starter-code v2/src/index.css
+++ b/starter-code v2/src/index.css
@@ -41,3 +41,21 @@ body::before {
 .restList {
 	margin: 1rem 0rem 0 0rem;
 }
+
+.fade-enter {
+	opacity: 0;
+}
+
+.fade-enter-active {
+	opacity: 1;
+	transition: opacity 500ms ease-in;
+}
+
+.fade-exit {
+	opacity: 1;
+}
+
+.fade-exit-active {
+	opacity: 0;
+	transition: opacity 500ms ease-out;
+}
